# PIXLPAL-M1

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/All_Open_Pxp_Apps/Example_Apps/App_Example_Draw_Image/: CMakeLists.txt  exampleDrawImageApp.cpp
components/All_Open_Pxp_Apps/Example_Apps/App_Example_Draw_Image/include/: exampleDrawImageApp.h
components/All_Open_Pxp_Apps/Example_Apps/App_Example_Draw_Shapes/: CMakeLists.txt  exampleDrawShapesApp.cpp
components/All_Open_Pxp_Apps/Example_Apps/App_Example_Draw_Shapes/include/: exampleDrawShapesApp.h
components/All_Open_Pxp_Apps/Example_Apps/App_Example_Encoder_N_Beep/: CMakeLists.txt
components/All_Open_Pxp_Apps/Example_Apps/App_Example_Encoder_N_Beep/include/: exampleEncoderBeepApp.h
components/All_Open_Pxp_Apps/Example_Apps/App_Example_Write_Text/: CMakeLists.txt  exampleWriteTextApp.cpp
components/All_Open_Pxp_Apps/Meterbit_Apps/App_Example_Draw_Image/: exampleDrawImageApp.cpp
components/All_Open_Pxp_Apps/Meterbit_Apps/App_Example_Draw_Shapes/: exampleDrawShapesApp.cpp
components/All_Open_Pxp_Apps/Meterbit_Apps/App_Example_Encoder_N_Beep/: exampleUseEncoderBeepApp.cpp
components/All_Open_Pxp_Apps/Meterbit_Apps/App_Example_Write_Text/: exampleWriteTextApp.cpp
components/All_Open_Pxp_Apps/Meterbit_Apps/App_Example_Write_Text/include/: exampleWriteTextApp.h
components/All_Open_Pxp_Apps/Meterbit_Apps/App_Meterbit_Apple_Notifications/: appleNotifications.cpp
components/All_Open_Pxp_Apps/Meterbit_Apps/App_Meterbit_Aud_Spectrum_Analyzer/: CMakeLists.txt  audSpectrumAnalyzer.cpp
components/All_Open_Pxp_Apps/Meterbit_Apps/App_Meterbit_BigClock/: CMakeLists.txt  mtb_bigClock.cpp
components/All_Open_Pxp_Apps/Meterbit_Apps/App_Meterbit_Calendar_Clock/: CMakeLists.txt  mtb_cal_clk.cpp
components/All_Open_Pxp_Apps/Meterbit_Apps/App_Meterbit_Calendar_Clock/include/: mtb_cal_clk.h
components/All_Open_Pxp_Apps/Meterbit_Apps/App_Meterbit_ChatGPT/: CMakeLists.txt  mtb_chatGPT.cpp
components/All_Open_Pxp_Apps/Meterbit_Apps/App_Meterbit_Crypto_Stats/: crypto_Stats.cpp
components/All_Open_Pxp_Apps/Meterbit_Apps/App_Meterbit_Currency_Exchange/: currencyExchange.cpp
components/All_Open_Pxp_Apps/Meterbit_Apps/App_Meterbit_Finnhub/: finnhub_Stats.cpp
components/All_Open_Pxp_Apps/Meterbit_Apps/App_Meterbit_Google_Calendar/: CMakeLists.txt  googleCalendar.cpp
components/All_Open_Pxp_Apps/Meterbit_Apps/App_Meterbit_Google_Calendar/include/: googleCalendar.h
components/All_Open_Pxp_Apps/Meterbit_Apps/App_Meterbit_Google_News/: googleNews.cpp
components/All_Open_Pxp_Apps/Meterbit_Apps/App_Meterbit_Google_Weather/: googleWeather.cpp
components/All_Open_Pxp_Apps/Meterbit_Apps/App_Meterbit_Internet_Radio/: CMakeLists.txt  internet_Radio.cpp
components/All_Open_Pxp_Apps/Meterbit_Apps/App_Meterbit_Live_Football/: liveFootball.cpp
components/All_Open_Pxp_Apps/Meterbit_Apps/App_Meterbit_Live_Football/include/: liveFootball.h
components/All_Open_Pxp_Apps/Meterbit_Apps/App_Meterbit_Music_Player/: musicPlayer.cpp
components/All_Open_Pxp_Apps/Meterbit_Apps/App_Meterbit_Music_Player/include/: musicPlayer.h
components/All_Open_Pxp_Apps/Meterbit_Apps/App_Meterbit_News_API/: newsAPI.cpp
components/All_Open_Pxp_Apps/Meterbit_Apps/App_Meterbit_OpenMeteo/: openMeteo.cpp
components/All_Open_Pxp_Apps/Meterbit_Apps/App_Meterbit_OpenWeather/: openWeather.cpp
components/All_Open_Pxp_Apps/Meterbit_Apps/App_Meterbit_Outlook_Cal/: CMakeLists.txt  outlookCalendar.cpp
components/All_Open_Pxp_Apps/Meterbit_Apps/App_Meterbit_PixelAnimClock/: CMakeLists.txt  pixelAnimClock.cpp
components/All_Open_Pxp_Apps/Meterbit_Apps/App_Meterbit_PixelAnimClock/include/: pixelAnimClock.h
components/All_Open_Pxp_Apps/Meterbit_Apps/App_Meterbit_PolygonFX/: polygonFX.cpp
components/All_Open_Pxp_Apps/Meterbit_Apps/App_Meterbit_Rss_News_Reader/: rss_News_Reader.cpp
components/All_Open_Pxp_Apps/Meterbit_Apps/App_Meterbit_Spotify_Updates/: CMakeLists.txt  mtbSpotifyInfo.cpp
components/All_Open_Pxp_Apps/Meterbit_Apps/App_Meterbit_Stopwatch/: realStopwatch.cpp
components/All_Open_Pxp_Apps/Meterbit_Apps/App_Meterbit_StudioLight/: studioLight.cpp
components/All_Open_Pxp_Apps/Meterbit_Apps/App_Meterbit_StudioLight/include/: studioLight.h
components/All_Open_Pxp_Apps/Meterbit_Apps/App_Meterbit_World_Clock/: worldClock.cpp
components/All_Open_Pxp_Apps/Meterbit_Apps/App_Meterbit_World_Flags/: worldFlags.cpp
components/ESP32-audioI2S/: CMakeLists.txt
components/ESP32-audioI2S/src/: Audio.cpp  Audio.h
components/espressif__usb_host_uac/: uac_host.c
components/meterbit_audio/: CMakeLists.txt  mtb_audio.cpp
components/meterbit_audio/include/: microphone.h  mtb_audio.h  patternsHUB75.h
components/meterbit_ble/: mtb_ble.cpp  mtb_ble_software_update.cpp  mtb_ble_system.cpp
components/meterbit_engine/: CMakeLists.txt  mtb_engine.cpp  mtb_status_bar_clock.cpp  mtb_usb_ota.cpp
components/meterbit_engine/include/: commonApps.h  mtb_engine.h  my_secret_keys.h
components/meterbit_github/: mtb_github.cpp
components/meterbit_graphics/: CMakeLists.txt  lodepng_psram.cpp  mtb_gif_parser.cpp  mtb_graphics.cpp  mtb_text_scroll.cpp
components/meterbit_graphics/include/: mtb_graphics.h  mtb_text_scroll.h
components/meterbit_mqtt/: mtb_mqtt.cpp
components/meterbit_ota/: mtb_ota.cpp
components/meterbit_ota/include/: mtb_ota.h
components/meterbit_system/: CMakeLists.txt  mtb_PosixTZtoLocalTime.cpp  mtb_buzzer.cpp  mtb_ntp.cpp  mtb_system.cpp
components/meterbit_system/include/: mtb_PosixTZtoLocalTime.h
components/meterbit_usb/: CMakeLists.txt  mtb_usb_fs.cpp  mtb_usb_msc.cpp  mtb_usb_ota.cpp
components/meterbit_usb/include/: mtb_usb_fs.h  mtb_usb_msc.h  mtb_usb_ota.h
components/meterbit_wifi/: mtb_wifi.cpp
main/: CMakeLists.txt  idf_component.yml  main.cpp
